--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "@syncfusion/ej2-react-popups": "^19.4.52",
     "@syncfusion/ej2-react-richtexteditor": "^19.4.50",
     "@syncfusion/ej2-react-schedule": "^19.4.50",
+    "date-fns": "^2.29.3",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
+    "react-flatpickr": "^3.10.13",
     "react-icons": "^4.3.1",
+    "react-moment": "^1.1.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0"
   },
