--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@syncfusion/ej2-react-popups": "^19.4.52",
     "@syncfusion/ej2-react-richtexteditor": "^19.4.50",
     "@syncfusion/ej2-react-schedule": "^19.4.50",
+    "apexcharts": "^3.36.3",
+    "axios": "^1.2.1",
     "date-fns": "^2.29.3",
     "moment": "^2.29.4",
     "react": "^17.0.2",
