--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "apexcharts": "^3.36.3",
     "axios": "^1.2.1",
     "date-fns": "^2.29.3",
+    "dayjs": "^1.11.7",
     "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-datepicker": "^4.8.0",
