--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.7",
     "moment": "^2.29.4",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.4.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-flatpickr": "^3.10.13",
